--- a/PascalABC.NET.SDK/Sdk/Sdk.props
+++ b/PascalABC.NET.SDK/Sdk/Sdk.props
@@ -4,7 +4,11 @@
         <OutDir>$(MSBuildProjectDirectory)\bin\</OutDir>
 
         <PascalABCNETCompilerPackageName>FVNever.PascalABC.NET.Compiler</PascalABCNETCompilerPackageName>
-        <PascalABCNETCompilerPackageVersion>3.8.3.3169</PascalABCNETCompilerPackageVersion>
+
+        <_PascalABCNETCompilerPackageVersionPrefix>3.8.3.3169</_PascalABCNETCompilerPackageVersionPrefix>
+
+        <PascalABCNETCompilerPackageVersion Condition=" $(_PascalABCNETCompilerPackageVersionSuffix) != '' ">$(_PascalABCNETCompilerPackageVersionPrefix)-$(_PascalABCNETCompilerPackageVersionSuffix)</PascalABCNETCompilerPackageVersion>
+        <PascalABCNETCompilerPackageVersion Condition=" $(PascalABCNETCompilerPackageVersion) == '' ">$(_PascalABCNETCompilerPackageVersionPrefix)</PascalABCNETCompilerPackageVersion>
     </PropertyGroup>
 
     <ItemGroup Condition=" $(SkipPascalABCNETCompilerInstallation) != 'true' ">
