--- a/NuGet.config
+++ b/NuGet.config
@@ -1,4 +1,7 @@
 ﻿<configuration>
+    <config>
+        <add key="globalPackagesFolder" value="packages" />
+    </config>
     <packageSources>
         <add key="local" value="nupkg" />
     </packageSources>
