--- a/PascalABC.NET.Compiler/PascalABC.NET.Compiler.nuspec
+++ b/PascalABC.NET.Compiler/PascalABC.NET.Compiler.nuspec
@@ -7,7 +7,7 @@
         <authors>ForNeVeR</authors>
         <license type="file">doc\License_en.txt</license>
         <projectUrl>http://pascalabc.net/</projectUrl>
-        <description>The new generation Pascal programming language for .NET: a compiler package.</description>
+        <description>Binary files of the official compiler for the PascalABC.NET programming language.</description>
     </metadata>
 
     <files>
