--- a/PascalABC.NET.SDK/Sdk/Sdk.props
+++ b/PascalABC.NET.SDK/Sdk/Sdk.props
@@ -1,5 +1,9 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+    <PropertyGroup Label="SdkCustomization">
+        <EnableDefaultItems>false</EnableDefaultItems>
+    </PropertyGroup>
+
     <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
     <PropertyGroup Label="CompilerVersioning">
