--- a/PascalABC.NET.SDK/Sdk/Sdk.targets
+++ b/PascalABC.NET.SDK/Sdk/Sdk.targets
@@ -2,52 +2,32 @@
 
     <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" Condition=" '$(CommonTargetsPath)' == '' " />
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <DebugMode Condition=" '$(DebugMode)' == '' ">true</DebugMode>
+    </PropertyGroup>
+
     <PropertyGroup>
         <_PascalABCNETCompilerPackagePath>$(NuGetPackageRoot)\$(PascalABCNETCompilerPackageName)\$(PascalABCNETCompilerPackageVersion)</_PascalABCNETCompilerPackagePath>
 
-        <_PascalAbcCompilerAssembly Condition=" $(_PascalAbcCompilerAssembly) == '' and $(SkipPascalABCNETCompilerInstallation) != true ">$(_PascalABCNETCompilerPackagePath)\tools\pabcnetc.exe</_PascalAbcCompilerAssembly>
-        <_PascalAbcCompilerAssembly Condition=" $(_PascalAbcCompilerAssembly) == '' ">pabcnetc.exe</_PascalAbcCompilerAssembly>
+        <_PascalAbcCompilerAssembly Condition=" $(_PascalAbcCompilerAssembly) == '' and $(SkipPascalABCNETCompilerInstallation) != true ">$(_PascalABCNETCompilerPackagePath)\tools\pabcnetcclear.exe</_PascalAbcCompilerAssembly>
+        <_PascalAbcCompilerAssembly Condition=" $(_PascalAbcCompilerAssembly) == '' ">pabcnetcclear.exe</_PascalAbcCompilerAssembly>
 
         <PascalAbcCompilerCommand Condition=" $(PascalAbcCompilerCommand) == '' ">$(_PascalAbcCompilerAssembly)</PascalAbcCompilerCommand>
+
+        <_PascalAbcCompilerArguments Condition=" $(DebugMode) == 'true' ">$(PascalAbcCompilerArguments) /Debug:1</_PascalAbcCompilerArguments>
     </PropertyGroup>
 
-    <!--
-        Due to a bug in pabcnetc (https://github.com/pascalabcnet/pascalabcnet/issues/2708), it always writes the output
-         assembly to the input file directory when called in a way we're calling it.
-
-        Because of this, we have to implement a hack: move the assembly file to the output directory after the
-        compilation (Compile target).
-
-        And if there's already something in the current compilation directory at the moment of compilation, it would be
-        overwritten. To avoid this unexpected overwrite, we check that such item doesn't exist (OutputItemCheck target).
-    -->
-
-    <Target Name="OutputItemCheck" BeforeTargets="Compile" DependsOnTargets="Restore">
-        <ItemGroup>
-            <_CompileOutput Include="@(MainCompile -> '%(RootDir)%(Directory)%(FileName).exe')" />
-            <_CompileOutput Include="@(MainCompile -> '%(RootDir)%(Directory)%(FileName).pdb')" />
-
-            <_ExistingCompileOutput Include="@(_CompileOutput)" Condition=" Exists(%(FullPath)) " />
-        </ItemGroup>
-
-        <Error Condition=" @(_ExistingCompileOutput->Count()) > 0 "
-               Text="Items &quot;%(_ExistingCompileOutput.FullPath)&quot; already exist on disk but would be removed after compilation. Please clean up manually." />
-    </Target>
+    <ItemGroup>
+        <_PascalAbcCompilerOutput Include="@(MainCompile -> '$(OutDir)\%(FileName).exe')" />
+        <_PascalAbcCompilerOutput Include="@(MainCompile -> '$(OutDir)\%(FileName).pdb')" Condition=" $(DebugMode) == 'true' " />
+    </ItemGroup>
 
     <Target Name="Compile" BeforeTargets="Build"
-            Inputs="%(Compile.FullPath);@(MainCompile -> '%(FullPath)')"
-            Outputs="
-                @(MainCompile -> '$(OutDir)\%(FileName).exe');
-                @(MainCompile -> '$(OutDir)\%(FileName).pdb')">
-
-        <ItemGroup>
-            <_CurrentCompileOutput Include="@(MainCompile -> '%(RootDir)%(Directory)%(FileName).exe')" />
-            <_CurrentCompileOutput Include="@(MainCompile -> '%(RootDir)%(Directory)%(FileName).pdb')" />
-        </ItemGroup>
-
-        <Exec Command="$(PascalAbcCompilerCommand) /noconsole %(MainCompile.FullPath)" />
-
-        <Move SourceFiles="%(_CurrentCompileOutput.FullPath)" DestinationFolder="$(OutDir)" />
+            Inputs="@(Compile);@(MainCompile)"
+            Outputs="@(_PascalAbcCompilerOutput)">
+        <MakeDir Directories="$(OutDir)" />
+        <Exec Command="@(MainCompile -> '$(PascalAbcCompilerCommand) $(_PascalAbcCompilerArguments) &quot;/Output:$(OutDir)\%(FileName).exe&quot; %(FullPath)')"
+              Condition=" '%(Identity)' != ''" />
     </Target>
 
     <Target Name="Build" />
