(#6, #9) SDK: reference support

--- a/PascalABC.NET.SDK.Tests/PascalABC.NET.SDK.Tests.csproj
+++ b/PascalABC.NET.SDK.Tests/PascalABC.NET.SDK.Tests.csproj
@@ -29,4 +29,8 @@
         <None Include="TestData\**\*" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="TestData\MultiProjectSolution" />
+    </ItemGroup>
+
 </Project>
