(#14) Compiler: upgrade to a forked version

--- a/PascalABC.NET.SDK/Sdk/Sdk.props
+++ b/PascalABC.NET.SDK/Sdk/Sdk.props
@@ -8,7 +8,8 @@
     <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
     <PropertyGroup Label="CompilerVersioning">
-        <_PascalABCNETCompilerPackageVersionPrefix>3.8.3.3177</_PascalABCNETCompilerPackageVersionPrefix>
+        <_PascalABCNETCompilerPackageVersionPrefix>3.8.3.3178</_PascalABCNETCompilerPackageVersionPrefix>
+        <_PascalABCNETCompilerPackageVersionSuffix Condition=" $(_PascalABCNETCompilerPackageVersionSuffix) == '' ">preview.1</_PascalABCNETCompilerPackageVersionSuffix> <!-- TODO[#xxx]: Remove this line -->
     </PropertyGroup>
 
     <PropertyGroup Label="Static">
