--- a/PascalABC.NET.SDK/Sdk/Sdk.targets
+++ b/PascalABC.NET.SDK/Sdk/Sdk.targets
@@ -27,9 +27,9 @@
         <_PascalAbcCompilerArguments Condition=" $(SkipGenerateReferenceFile) != 'true' ">$(_PascalAbcCompilerArguments) "/SearchDir:$(_GeneratedReferenceFileDirectory)"</_PascalAbcCompilerArguments>
     </PropertyGroup>
 
-    <Target Name="GenerateReferenceFile" BeforeTargets="Compile">
+    <Target Name="GenerateReferenceFile" BeforeTargets="Compile" DependsOnTargets="ResolveAssemblyReferences">
         <ItemGroup>
-            <_ReferenceFileLines Include="@(ReferencePath -> '{$reference %(FullPath)}')"/>
+            <_ReferenceFileLines Include="@(ReferenceCopyLocalPaths -> '{$reference %(FullPath)}')"/>
             <_ReferenceFileLines Include="unit $([System.IO.Path]::GetFileNameWithoutExtension('$(_GeneratedReferenceFilePath)'))%3b"/>
             <_ReferenceFileLines Include="end."/>
         </ItemGroup>
