--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,12 @@ jobs:
       - name: Fetch the sources
         uses: actions/checkout@v4
 
-      - name: Set up .NET 6.0 SDK
+      - name: Set up .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: |
+            6.0.x
+            8.0.x
 
       - name: Build NuGet packages
         shell: pwsh
