--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -2,7 +2,9 @@
 
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
+    - renovate/**
     tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
